Diviso il codice in "sezioni", custom scrollbar, test articolo 2, fixati margini di alcuni hr

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
     display: none;
 }
 
+/*BOX HOVER EFFECT*/
+
 .hover-effect{
     transition: 0.3s;
 }
@@ -17,3 +19,42 @@
 .hover-effect:hover{
     box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
 }
+
+/*BOX HOVER EFFECT END*/
+
+/*ARTICLE HOVER EFFECT*/
+
+.article-hover-effect{
+    transition: 0.3s;
+}
+
+.article-hover-effect:hover{
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
+/*ARTICLE HOVER EFFECT END*/
+
+/*CUSTOM SCROLLBAR*/
+
+html{
+    scrollbar-width: normal;
+    scrollbar-color: #777 #555;
+}
+
+html::-webkit-scrollbar{
+    width: 15px;
+}
+
+html::-webkit-scrollbar-thumb{
+    background-color: #7775;
+}
+
+html::-webkit-scrollbar-thumb:hover{
+    background-color: #777;
+}
+
+html::-webkit-scrollbar-track{
+    background-color: #5555;
+}
+
+/*CUSTOM SCROLLBAR END*/
